data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1278.wast
;; 9. **Br within Nested Loops and Imported Function:**    - Create nested loops within module A, employing `br` instructions for looping controls that involve calling functions imported from module B. This tests if the operand stack and the loop control flow remain consistent when transitioning across module calls.    - **Constraint Checked:** Loop controls and stack unwinding correctness during cross-module transitions.    - **Relation to Constraint:** Validates the integrity of nested loop structures and stack during cross-module transitional instructions.

(assert_invalid
  (module
    (func $nested_loop_import
      (import "moduleB" "imported_func" (func $imported_func (result i32)))
      (loop (result i32)
        (loop (result i32)
          (call $imported_func)
          (br 1)
        )
        (call $imported_func)
        (br 1)
      )
    )
  )
  "type mismatch"
)